# Mimic

./: .gitignore  Cargo.toml  README.md  convert_all_to_wav  convert_to_wav  generate_in_a_loop  output.txt  play_and_record  play_and_record_all  play_no_record  playback  prune  prune_all  seed.txt
base_training_data/: aladdin_ingame  aladdin_title  aliens_into  barbie  batman_forever_title  bubble_ghost  casper_menu  dick_tracy_ingame  dk_title  harvest_title  knights_quest_title  lion_king_intro  pk_oak  shaq_fu_title  star_wars_return_of_the_jedi_ingame  star_wars_return_of_the_jedi_title  tetris_2_game_menu  tetris_2_game_menu_c  tetris_2_startup  tetris_attack  tetris_world  tetris_world_music_c  toy_story_ingame  toy_story_title
nice_generated_sounds/: brute-force-small-output  du_nanana_dunanananan.txt  dundundundenenenene.txt  dunenanannanan.txt  maybe_learned  maybe_learned2  nanana_neenawnaw.txt  nice_sah  output.txt  really_cool_again.txt  really_cool_uncanny_valley.txt  stable_tune  zelda_remix.txt
out_of_sample/: mulan_title  pinball_deluxe_sample  pinball_mania_title  startgate_title  tasmania_story  urban_strike_startup  wheel_of_fortune_startup
src/: clock.rs  cpu.rs  frame_timer.rs  gpu.rs  headless.rs  instruction.rs  instruction_clock.rs  instruction_compiler.rs  instruction_data.rs  lib.rs  machine.rs  main.rs  memory.rs  playback.rs  ppu.rs  register.rs  sdl.rs  sound.rs  terminal.rs  util.rs
training_data/: bubble_ghost_ingame  fragment  knights_quest_ingame  language_translator  lemmings_ingame  pk_title  poke  star_wars_title  super_mario  (+5 more)
(+537 files in other folders)
