[package]
name = "gb_int"
version = "0.1.0"
authors = ["Blake Loring <blake@parsed.uk>"]
edition = "2018"

[dependencies]
log = "0.4"
env_logger = "0.7.1"
sdl2 = "0.34.3"
console_engine = "2.0.1"
drawille = "0.3.0"
crossterm = "0.20.0"
clap = "3.0.0-beta.2"
serde = "1.0.130"
ciborium = "0.1.0"

[profile.dev]
overflow-checks = false
