[package]
authors = ["Blake Loring <blake@parsed.uk>"]
edition = "2018"
name = "gb_int"
version = "0.1.0"

[dependencies]
ciborium = "0.1.0"
clap = "3.0.0-beta.2"
console_engine = {version = "2.1.0", features = ['event']}
drawille = "0.3.0"
env_logger = "0.7.1"
log = "0.4"
sdl2 = "0.34.3"
serde = "1.0.130"

[profile.dev]
overflow-checks = false
