[package]
name = "gb_int"
version = "0.1.0"
authors = ["Blake Loring <blake@parsed.uk>"]
edition = "2021"
default-run = "emulator"

[dependencies]
log = "0.4"
env_logger = "0.7.1"
sdl2 = "0.34.3"
drawille = "0.3.0"
crossterm = "0.20.0"
serde = "1.0.130"
ciborium = "0.1.0"
cpal = "0.13.4"
rand = "0.8.5"
hound = "3.4.0"
clap = { version = "4.3.1", features = ["derive"] }

[profile.dev]
overflow-checks = false
